TODO: add debug/trace logging to some modules
TODO: use the eval-with-cb-call trick also to speed up JSON?
TODO: FAQ: common pitfalls? invoke-before-return
TODO: FAQ: scope-ids? hosts file order?
TODO: AnyEvent::Handle with AnyEvent::IO?
TODO: invalid. and localhost. specialcasing inside AEDNS and not AESocket (rfc6761)
TODO: maybe implement env variable to give hosts precedence

TODO: improve confess skipping
        - work around a newly introduced bug in Socket 2.011 (an
          errornous sun_length check) (analyzed by Maxime Soulé).
	- AnyEvent::TLS didn't load (but refer to) AnyEvent::Socket
          (analyzed by Ben Magistro).
        - AnyEvent::Strict will now confess, not croak. This is in line with
          it being a development/debugging tool.
        - work around a number of libglib bugs (debug builds of libglib enforce
          certain undocumented behaviour patterns such as not being able to
          remove a child watch source after it has fired, which we will try
          to emulate to avoid "criticals". what where they thinking...).
        - changed default dns resolver "max_outstanding" value from 1 to 10,
          the latter beinfg the intended value all along
          (reported by Ilya Chesnokov).
        - added new "AnyEvent::Impl::UV" interface module to the UV event lib
          (written by Mike Lowell).

7.07 Tue Dec 17 17:45:02 CET 2013
	- the documentation for custom tls verify schemes was wrong. make it agree
          with the code (reported by Maxime Soulé).
	- added cbor read and write types to AnyEvent::Handle (using CBOR::XS).
        - work around an API change in openssl that could cause wrong tls connection
          aborts, likely on windows only (analyzed by sten).
        - calling AnyEvent->now_update with AnyEvent::Impl::Perl caused an
          endless loop (reported by Dietrich Rebmann).
        - add tlsv1_1 and tlsv1_2 protocols to AnyEvent::TLS
          (patch by Maxime Soulé).